<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.TopArtists" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fta_cl_pagination"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toTopOf="@+id/fta_lv_top_artists"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/fta_btn_left_pagination"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/btn_square_black"
            android:gravity="center_horizontal|center_vertical"
            android:text="&lt;"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-condensed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/fta_btn_right_pagination"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/btn_square_black"
            android:gravity="center_horizontal|center_vertical"
            android:text="\>"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-condensed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fta_tv_pagination"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/fta_tv_pagination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="1 - 10"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-condensed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fta_btn_left_pagination"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/fta_et_search"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/dw_btn_style_black"
            android:ems="10"
            android:hint="Artist name"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textColorHint="@color/gray_sure"
            android:textCursorDrawable="@drawable/dw_white_cursor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fta_btn_right_pagination"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/fta_lv_top_artists"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fta_cl_pagination" />
</androidx.constraintlayout.widget.ConstraintLayout>