...
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.intelixence.lastfm23.CustomUi.ViewPager.LockableViewPager
        android:id="@+id/ac_lvp_fragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/ac_tl_fragments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/ac_tl_fragments"
...
